--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Interactive visualization of housing inventory and occupancy projections">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="max-width: fit-content;margin-left: auto;margin-right: auto;width: 90%;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
