--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Housing Simulation</title>
-    <meta name="description" content="Interactive visualization of housing inventory and occupancy projections">
+    <title>Homeless Policy Concepts</title>
+    <meta name="description" content="Interactive visualizations of homeless policies">
   </head>
   <body>
     <div id="root" style="max-width: fit-content;margin-left: auto;margin-right: auto;width: 90%;"></div>
