--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homeless Policy Concepts</title>
     <meta name="description" content="Interactive visualizations of homeless policies">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root" style="max-width: fit-content;margin-left: auto;margin-right: auto;width: 90%;"></div>
